# purescript-fast-compiler

./: .gitignore  Cargo.toml  README.md  TESTING.md  build.rs
.github/workflows/: build_all_packages.yml  test.yml
editors/code/: .vscodeignore  build.sh  dev.sh  package-lock.json  package.json  run.sh
language-cst-parser/: README.md
scripts/: check-codegen-fixtures.sh
src/: arena.rs  ast.rs  build.rs  cst.rs  interner.rs  js_ffi.rs  lib.rs  main.rs  names.rs  span.rs
src/ast/: decl.rs  expr.rs  mod.rs  module.rs  pattern.rs  span.rs  types.rs
src/codegen/: common.rs  js.rs  js_ast.rs  mod.rs  printer.rs  ts_types.rs
src/diagnostics/: error.rs  mod.rs
src/lexer/: layout.rs  logos_lexer.rs  mod.rs  token.rs
src/lsp/: mod.rs
src/parser/: grammar.lalrpop  grammar_full.lalrpop.bak  lexer_adapter.rs  mod.rs
src/typechecker/: check.rs  convert.rs  env.rs  error.rs  infer.rs  kind.rs  mod.rs  registry.rs  resolve.rs  types.rs  unify.rs
tests/: ast.rs  build.rs  codegen.rs  download.sh  integration.rs  lsp_e2e.rs  node_integration.rs  package-tests.rs  packages.list  parse.rs  resolve.rs  snapshots.rs  test_utils.rs  typechecker_comprehensive.rs
tests/snapshots/: codegen__codegen_ApplicativeDict.snap  codegen__codegen_CallSiteDictPassing.snap  codegen__codegen_CaseExpressions.snap  codegen__codegen_ClassAccessors.snap  codegen__codegen_ClassMethodDict.snap  codegen__codegen_ConstrainedFunctions.snap  codegen__codegen_ConstrainedInstance.snap  codegen__codegen_ConstrainedValueDict.snap  codegen__codegen_ConstraintDictApplication.snap  codegen__codegen_DataConstructors.snap  codegen__codegen_DeriveEq.snap  codegen__codegen_DeriveEqNewtype.snap  codegen__codegen_DeriveFunctor.snap  codegen__codegen_DeriveGeneric.snap  codegen__codegen_DeriveNewtype.snap  codegen__codegen_DeriveOrd.snap  codegen__codegen_DeriveOrdNewtype.snap  codegen__codegen_DictPassing.snap  codegen__codegen_DoNotation.snap  codegen__codegen_ElseInstanceMultiParamBug.snap  codegen__codegen_ForeignImport.snap  codegen__codegen_Functions.snap  codegen__codegen_Guards.snap  codegen__codegen_ImportsBasic.snap  codegen__codegen_ImportsClassAndInstances.snap  (+104 more)
(+788 files in other folders)
