[package]
name = "purescript-fast-compiler"
version = "0.1.0"
edition = "2021"

[dependencies]
logos = "0.14"
string-interner = "0.17"
bumpalo = "3.16"
miette = { version = "7.6", features = ["fancy"] }
thiserror = "2.0"
lalrpop-util = "0.22"
glob = "0.3"
swc_ecma_parser = "34.0.0"
swc_ecma_ast = "20.0.1"
swc_common = "18.0.1"

[build-dependencies]
lalrpop = "0.22"

[dev-dependencies]
insta = "1.34"
criterion = "0.5"
proptest = "1.4"
regex = "1"
