[package]
name = "purescript-fast-compiler"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pfc"
path = "src/main.rs"

[[bin]]
name = "profile-load-sources"
path = "src/bin/profile_load_sources.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
logos = "0.14"
string-interner = "0.17"
bumpalo = "3.16"
miette = { version = "7.6", features = ["fancy"] }
thiserror = "2.0"
lalrpop-util = "0.22"
glob = "0.3"
swc_ecma_parser = "35.0.0"
swc_ecma_ast = "21.0.0"
swc_common = "19.0.0"
swc_ecma_codegen = "24.0.0"
ntest_timeout = "0.9.5"
rayon = "1.10"
mimalloc = { version = "0.1", default-features = false }
tower-lsp = "0.20"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"
zstd = "0.13"

[build-dependencies]
lalrpop = "0.22"

[dev-dependencies]
insta = "1.34"
criterion = "0.5"
proptest = "1.4"
regex = "1"
tempfile = "3.27.0"
wait-timeout = "0.2.1"
